[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/theme/font_body.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/theme/font_title.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/theme/theme_lerimama.tres" type="Theme" id=3]
[ext_resource path="res://game/gui/game_over.gd" type="Script" id=4]
[ext_resource path="res://game/gui/_help_gui_guide.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/gui/highscore_table.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/theme/style_line_edit.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/resources/tileset_titles.tres" type="TileSet" id=9]

[node name="GameOver" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 264.0, 616.0 ],
"_edit_vertical_guides_": [ 640.0 ]
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="_help_gui_guide" parent="." instance=ExtResource( 5 )]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -336.0
margin_top = -272.0
margin_right = 336.0
margin_bottom = -248.0

[node name="GameoverTitle" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Duel" type="Control" parent="GameoverTitle"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Win" type="Control" parent="GameoverTitle/Duel"]
visible = false
modulate = Color( 0.368627, 1, 0.662745, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -232.0
margin_right = 512.0
margin_bottom = 56.0

[node name="PlayerLabel" type="Label" parent="GameoverTitle/Duel/Win"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -272.0
margin_top = -2.0
margin_right = 272.0
margin_bottom = 30.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "%player 1"
align = 1
autowrap = true
uppercase = true

[node name="Win" type="TileMap" parent="GameoverTitle/Duel/Win"]
position = Vector2( 360, 56 )
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 2, 0, 0, 4, 0, 0, 6, 0, 0, 8, 0, 0, 11, 0, 0, 14, 0, 0, 15, 0, 0, 18, 0, 0, 65536, 0, 0, 65538, 0, 0, 65540, 0, 0, 65542, 0, 0, 65544, 0, 0, 65545, 0, 0, 65547, 0, 0, 65549, 0, 0, 65554, 0, 0, 131072, 0, 0, 131074, 0, 0, 131076, 0, 0, 131078, 0, 0, 131080, 0, 0, 131082, 0, 0, 131083, 0, 0, 131086, 0, 0, 131087, 0, 0, 131090, 0, 0, 196608, 0, 0, 196610, 0, 0, 196612, 0, 0, 196614, 0, 0, 196616, 0, 0, 196619, 0, 0, 196624, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262150, 0, 0, 262152, 0, 0, 262155, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262162, 0, 0 )

[node name="ReasonLabel" type="Label" parent="GameoverTitle/Duel/Win"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.0
margin_top = 182.0
margin_right = 192.0
margin_bottom = 232.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "%Winner was better for
XX points"
align = 1
autowrap = true

[node name="Draw" type="Control" parent="GameoverTitle/Duel"]
visible = false
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -176.0
margin_right = 512.0
margin_bottom = 88.0

[node name="PlayerLabel" type="Label" parent="GameoverTitle/Duel/Draw"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -272.0
margin_top = -58.0
margin_right = 272.0
margin_bottom = -26.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Nobody wins"
align = 1
autowrap = true

[node name="Draw" type="TileMap" parent="GameoverTitle/Duel/Draw"]
position = Vector2( 160, 0 )
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 12, 0, 0, 13, 0, 0, 14, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 23, 0, 0, 24, 0, 0, 27, 0, 0, 29, 0, 0, 31, 0, 0, 65548, 0, 0, 65551, 0, 0, 65553, 0, 0, 65556, 0, 0, 65558, 0, 0, 65561, 0, 0, 65563, 0, 0, 65565, 0, 0, 65567, 0, 0, 131084, 0, 0, 131087, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131099, 0, 0, 131101, 0, 0, 131103, 0, 0, 196620, 0, 0, 196623, 0, 0, 196625, 0, 0, 196628, 0, 0, 196630, 0, 0, 196633, 0, 0, 196635, 0, 0, 196637, 0, 0, 196639, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262161, 0, 0, 262164, 0, 0, 262166, 0, 0, 262169, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0 )

[node name="DrawLabel" type="Label" parent="GameoverTitle/Duel/Draw"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = 126.0
margin_right = 176.0
margin_bottom = 184.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "%You both collected the same amount of points."
align = 1
autowrap = true

[node name="ReasonCleaned" type="Control" parent="GameoverTitle"]
visible = false
modulate = Color( 0.368627, 1, 0.662745, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -176.0
margin_right = 512.0

[node name="Congrats" type="TileMap" parent="GameoverTitle/ReasonCleaned"]
position = Vector2( 192, 0 )
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, -1610612736, 0, 2, -1610612736, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 10, 0, 0, 13, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 35, 0, 0, 36, 0, 0, 39, 0, 0, 65536, 0, 0, 65541, -1610612736, 0, 65544, 0, 0, 65546, 0, 0, 65547, 0, 0, 65549, 0, 0, 65551, 0, 0, 65556, 0, 0, 65559, 0, 0, 65561, 0, 0, 65564, 0, 0, 65567, 0, 0, 65570, 0, 0, 65575, 0, 0, 131072, 0, 0, 131077, -1610612736, 0, 131080, 0, 0, 131082, 0, 0, 131084, 0, 0, 131085, 0, 0, 131087, 0, 0, 131089, 0, 0, 131090, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131103, 0, 0, 131106, 0, 0, 131107, 0, 0, 131108, 0, 0, 131111, 0, 0, 196608, 0, 0, 196613, -1610612736, 0, 196616, 0, 0, 196618, 0, 0, 196621, 0, 0, 196623, 0, 0, 196626, 0, 0, 196628, 0, 0, 196631, 0, 0, 196633, 0, 0, 196636, 0, 0, 196639, 0, 0, 196645, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262154, 0, 0, 262157, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262164, 0, 0, 262167, 0, 0, 262169, 0, 0, 262172, 0, 0, 262175, 0, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262181, 0, 0, 262183, 0, 0 )

[node name="CleanedLabel" type="Label" parent="GameoverTitle/ReasonCleaned"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -252.0
margin_top = 118.0
margin_right = 252.0
margin_bottom = 150.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "You are full of colors again!"
align = 1

[node name="ReasonTime" type="Control" parent="GameoverTitle"]
visible = false
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -176.0
margin_right = 512.0

[node name="GameOver" type="TileMap" parent="GameoverTitle/ReasonTime"]
position = Vector2( 176, 0 )
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, -1610612736, 0, 2, 0, 0, 6, 0, 0, 7, 0, 0, 10, 0, 0, 14, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 27, 0, 0, 31, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 38, -1610612736, 0, 39, -1610612736, 0, 40, -1610612736, 0, 65536, 0, 0, 65541, 0, 0, 65544, 0, 0, 65546, 0, 0, 65547, 0, 0, 65549, 0, 0, 65550, 0, 0, 65552, 0, 0, 65558, 0, 0, 65561, 0, 0, 65563, 0, 0, 65567, 0, 0, 65569, 0, 0, 65574, 0, 0, 65577, 0, 0, 131072, 0, 0, 131074, 0, 0, 131075, 0, 0, 131077, 0, 0, 131078, -1610612736, 0, 131079, 0, 0, 131080, 0, 0, 131082, 0, 0, 131084, 0, 0, 131086, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131094, 0, 0, 131097, 0, 0, 131099, 0, 0, 131103, 0, 0, 131105, 0, 0, 131106, 0, 0, 131107, 0, 0, 131110, 0, 0, 131111, 0, 0, 131112, 0, 0, 196608, 0, 0, 196611, 0, 0, 196613, 0, 0, 196616, 0, 0, 196618, 0, 0, 196622, 0, 0, 196624, 0, 0, 196630, 0, 0, 196633, 0, 0, 196636, 0, 0, 196638, 0, 0, 196641, 0, 0, 196646, 0, 0, 196649, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262149, 0, 0, 262152, 0, 0, 262154, 0, 0, 262158, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262173, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262182, 0, 0, 262185, 0, 0 )

[node name="TimeupLabel" type="Label" parent="GameoverTitle/ReasonTime"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -219.0
margin_top = 118.0
margin_right = 219.0
margin_bottom = 150.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Can't handle the colors?"
align = 1

[node name="ReasonLife" type="Control" parent="GameoverTitle"]
visible = false
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -176.0
margin_right = 512.0

[node name="GameOver" type="TileMap" parent="GameoverTitle/ReasonLife"]
position = Vector2( 176, 0 )
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, -1610612736, 0, 2, 0, 0, 6, 0, 0, 7, 0, 0, 10, 0, 0, 14, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 27, 0, 0, 31, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 38, -1610612736, 0, 39, -1610612736, 0, 40, -1610612736, 0, 65536, 0, 0, 65541, 0, 0, 65544, 0, 0, 65546, 0, 0, 65547, 0, 0, 65549, 0, 0, 65550, 0, 0, 65552, 0, 0, 65558, 0, 0, 65561, 0, 0, 65563, 0, 0, 65567, 0, 0, 65569, 0, 0, 65574, 0, 0, 65577, 0, 0, 131072, 0, 0, 131074, 0, 0, 131075, 0, 0, 131077, 0, 0, 131078, -1610612736, 0, 131079, 0, 0, 131080, 0, 0, 131082, 0, 0, 131084, 0, 0, 131086, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131094, 0, 0, 131097, 0, 0, 131099, 0, 0, 131103, 0, 0, 131105, 0, 0, 131106, 0, 0, 131107, 0, 0, 131110, 0, 0, 131111, 0, 0, 131112, 0, 0, 196608, 0, 0, 196611, 0, 0, 196613, 0, 0, 196616, 0, 0, 196618, 0, 0, 196622, 0, 0, 196624, 0, 0, 196630, 0, 0, 196633, 0, 0, 196636, 0, 0, 196638, 0, 0, 196641, 0, 0, 196646, 0, 0, 196649, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262149, 0, 0, 262152, 0, 0, 262154, 0, 0, 262158, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262173, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262182, 0, 0, 262185, 0, 0 )

[node name="DiedLabel" type="Label" parent="GameoverTitle/ReasonLife"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -234.0
margin_top = 118.0
margin_right = 234.0
margin_bottom = 150.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "You are forever colorless!"
align = 1

[node name="GameSummary" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="Title" type="Label" parent="GameSummary"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -252.0
margin_top = 86.0
margin_right = 252.0
margin_bottom = 118.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Game summary"
align = 1
uppercase = true

[node name="Background" type="ColorRect" parent="GameSummary"]
margin_left = 368.0
margin_top = 184.0
margin_right = 608.0
margin_bottom = 538.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="DataContainer" type="VBoxContainer" parent="GameSummary"]
margin_left = 400.0
margin_top = 206.0
margin_right = 575.0
margin_bottom = 510.0
theme = ExtResource( 3 )
custom_constants/separation = 10
__meta__ = {
"_edit_group_": true,
"_editor_description_": ""
}

[node name="Title" type="Label" parent="GameSummary/DataContainer"]
margin_right = 175.0
margin_bottom = 24.0
rect_min_size = Vector2( 28, 24 )
size_flags_horizontal = 7
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 0.470588 )
text = "%Your stats"

[node name="Points" type="Label" parent="GameSummary/DataContainer"]
margin_top = 34.0
margin_right = 175.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "%Score: 0000000"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Time" type="Label" parent="GameSummary/DataContainer"]
margin_top = 62.0
margin_right = 175.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 1 )
text = "%Time: 00:00:00"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="PixelsOff" type="Label" parent="GameSummary/DataContainer"]
margin_top = 90.0
margin_right = 175.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 1 )
text = "%Colors collected: 000"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="AstrayPixels" type="Label" parent="GameSummary/DataContainer"]
margin_top = 118.0
margin_right = 175.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 1 )
text = "%Left strays: 0000"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Game" type="Label" parent="GameSummary/DataContainer"]
visible = false
margin_right = 223.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 1 )
text = "%Game: Cleaner"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Level" type="Label" parent="GameSummary/DataContainer"]
visible = false
margin_top = 32.0
margin_right = 223.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 1 )
text = "%Level: 00"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="CellsTraveled" type="Label" parent="GameSummary/DataContainer"]
visible = false
margin_top = 128.0
margin_right = 223.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 1 )
text = "%Cells travelled: 0000"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="BurstCount" type="Label" parent="GameSummary/DataContainer"]
visible = false
margin_top = 160.0
margin_right = 223.0
margin_bottom = 178.0
custom_fonts/font = ExtResource( 1 )
text = "%Bursts: 00"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="SkillsUsed" type="Label" parent="GameSummary/DataContainer"]
visible = false
margin_top = 192.0
margin_right = 223.0
margin_bottom = 210.0
custom_fonts/font = ExtResource( 1 )
text = "%Skills used: 00"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Background2" type="ColorRect" parent="GameSummary"]
margin_left = 616.0
margin_top = 184.0
margin_right = 912.0
margin_bottom = 538.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="HighscoreTable" parent="GameSummary" instance=ExtResource( 6 )]
margin_left = 648.0
margin_top = 206.0
margin_right = 880.0
margin_bottom = 510.0
size_flags_horizontal = 9

[node name="Menu" type="HBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -108.0
margin_top = -122.0
margin_right = 108.0
margin_bottom = -100.0
grow_horizontal = 2
custom_constants/separation = 32
__meta__ = {
"_edit_group_": true
}

[node name="RestartBtn" type="Button" parent="Menu"]
margin_right = 132.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../QuitBtn")
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "PLAY AGAIN"

[node name="NextLevelBtn" type="Button" parent="Menu"]
visible = false
margin_left = 164.0
margin_right = 398.0
margin_bottom = 22.0
mouse_default_cursor_shape = 2
size_flags_vertical = 8
text = "SWEEP NEXT SCREEN"

[node name="QuitBtn" type="Button" parent="Menu"]
margin_left = 164.0
margin_right = 216.0
margin_bottom = 22.0
focus_neighbour_right = NodePath("../RestartBtn")
mouse_default_cursor_shape = 2
size_flags_horizontal = 2
size_flags_vertical = 8
text = "QUIT"

[node name="ExitGameBtn" type="Button" parent="Menu"]
visible = false
margin_left = 356.0
margin_right = 478.0
margin_bottom = 22.0
mouse_default_cursor_shape = 2
size_flags_vertical = 8
text = "EXIT GAME"

[node name="NameInputPopup" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = 72.0
margin_right = 256.0
margin_bottom = 296.0

[node name="Label" type="Label" parent="NameInputPopup"]
anchor_right = 1.0
margin_left = 40.0
margin_top = 22.0
margin_right = -40.0
margin_bottom = 44.0
size_flags_vertical = 3
text = "%s"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="NameInputPopup"]
anchor_right = 1.0
margin_left = -32.0
margin_top = 54.0
margin_right = 32.0
margin_bottom = 80.0
size_flags_vertical = 3
custom_constants/line_spacing = 2
text = "You rank among the all-time best."
align = 1
autowrap = true

[node name="NameInput" type="LineEdit" parent="NameInputPopup"]
anchor_right = 1.0
margin_left = 186.0
margin_top = 104.0
margin_right = -186.0
margin_bottom = 144.0
grow_horizontal = 2
rect_min_size = Vector2( 140, 40 )
focus_neighbour_bottom = NodePath("../HBoxContainer/ConfirmBtn")
focus_next = NodePath("../HBoxContainer/ConfirmBtn")
size_flags_horizontal = 4
size_flags_vertical = 6
max_length = 10
middle_mouse_paste_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_alpha = 0.4
caret_blink = true

[node name="Undi" type="Panel" parent="NameInputPopup/NameInput"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -18.0
margin_right = 18.0
custom_styles/panel = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="NameInputPopup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.0
margin_top = 166.0
margin_right = 88.0
margin_bottom = 188.0
size_flags_horizontal = 4
size_flags_vertical = 11

[node name="CancelBtn" type="Button" parent="NameInputPopup/HBoxContainer"]
margin_right = 52.0
margin_bottom = 22.0
focus_neighbour_top = NodePath("../../NameInput")
focus_neighbour_right = NodePath("../ConfirmBtn")
focus_next = NodePath("../../NameInput")
mouse_default_cursor_shape = 2
size_flags_horizontal = 2
text = "SKIP"
align = 0

[node name="ConfirmBtn" type="Button" parent="NameInputPopup/HBoxContainer"]
margin_left = 78.0
margin_right = 176.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../CancelBtn")
focus_neighbour_top = NodePath("../../NameInput")
focus_next = NodePath("../CancelBtn")
mouse_default_cursor_shape = 2
size_flags_horizontal = 9
size_flags_vertical = 9
text = "CONFIRM"
align = 0

[connection signal="pressed" from="Menu/RestartBtn" to="." method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="Menu/NextLevelBtn" to="." method="_on_NextLevelBtn_pressed"]
[connection signal="pressed" from="Menu/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="Menu/ExitGameBtn" to="." method="_on_ExitGameBtn_pressed"]
[connection signal="text_changed" from="NameInputPopup/NameInput" to="." method="_on_NameEdit_text_changed"]
[connection signal="text_entered" from="NameInputPopup/NameInput" to="." method="_on_PopupNameEdit_text_entered"]
[connection signal="pressed" from="NameInputPopup/HBoxContainer/CancelBtn" to="." method="_on_CancelBtn_pressed"]
[connection signal="pressed" from="NameInputPopup/HBoxContainer/ConfirmBtn" to="." method="_on_ConfirmBtn_pressed"]
